--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.10",
         "sass-loader": "^8.0.2"
+    },
+    "dependencies": {
+        "redux": "^4.0.5"
     }
 }
