--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "sass-loader": "^8.0.2"
     },
     "dependencies": {
+        "react-icons": "^3.11.0",
+        "react-router-dom": "^5.2.0",
         "redux": "^4.0.5"
     }
 }
