--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "dependencies": {
         "react-icons": "^3.11.0",
         "react-modal": "^3.11.2",
+        "react-redux": "^7.2.1",
         "react-reveal": "^1.2.2",
         "react-router-dom": "^5.2.0",
-        "redux": "^4.0.5"
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0"
     }
 }
